--- a/quiz-app-v1/package.json
+++ b/quiz-app-v1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nametest",
+  "name": "quiz-app-v1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
