--- a/quiz-app-v1/package.json
+++ b/quiz-app-v1/package.json
@@ -2,7 +2,7 @@
   "name": "quiz-app-v1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dangnhatminh20.github.io/quiz-app-v1",
+  "homepage": "https://dangnhatminh20.github.io/quiz-app-v1",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
